syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "bhtu.work.tthsstatisticservice.proto";
option java_outer_classname = "RewardDetailProto"; // if not specified, it will convert the file name


message Date {
  string dateOfApply = 1;
}

message AwardPeriod {
  message AwardLevel {
    string achievement = 1;
    int32 prizeValue = 2;
  }

  string dateOfApply = 1;
  repeated AwardLevel awardLevels = 2;
}

service AwardService {
  rpc getByDate(Date) returns(AwardPeriod){}
}

message PrizePeriod {
  message PrizeValue {
    string nameOfPrize = 1;
    int32 unitPrize = 2;
  }

  string dateOfApply = 1;
  repeated PrizeValue prizeValues = 2;
}

service PrizeService {
  rpc getByDate(Date) returns(PrizePeriod){}
}